Added microservices and swagger
